2015-06-22  yves  <deville.yves@alpestat.com>

	* In 'gp' using estim = FALSE and a given value of 'varNoise'
	produced an error. Fixed.

2015-06-18  yves  <deville.yves@alpestat.com>

	* Changed the package example in 'kergp-package.Rd'. The Rcpp
	function is no longer used since it generate check errors on some
	CRAN platform. The example was downsized with n <- 25 instead of
	30.

2015-06-01  yves  <deville.yves@alpestat.com>

	* Changed the code of the 'examples' section in 'gp.Rd' to fix the
	problem found by H. Wickham, and to provide a comparision 
	of the times required by the 3 implementations shown.

	* Renamed the package. The CRAN version will be archived and
	re-submitted.

2015-04-22  yves  <deville.yves@alpestat.com>

	* Added commented code in covMan for an array "gradient" attribute
	for the 'acceptMatrix' case. To be checked later.

	* Added some infomation about 'acceptMatrix' and 'hasGrad' in
	'covMan.Rd'.
	
	* Changed a few words here and ther in the doc, mainly for typos. 

2015-04-20  yves  <deville.yves@alpestat.com>

	* Added a control on the existence of a computed gradient in 'gp'
	when the 'cov' object has class "covMan".

	* Added the 'hasGrad' slot to the "covMan" class and changed the
	examples/tests consequently (calls to the 'covMan' creator).

	* Fixed some rare typos in the doc. Changed the package Description
	to have a sentence.
	

2015-04-14 David 

	* Plenty of minor changes along the documentation. Code unchanged. 

2015-04-01  yves  <deville.yves@alpestat.com>

	* Replace [nN]ugget by [nN]oise. Changed the predict method for gp
	with a new 'forceInterp' parameter to reproduce the previous
 	nugget-based prediction. 
	
	* Renamed 'KM' into 'gp' everywhere (.R and .Rd files)
	

2015-04-01 david <ginsbourger@stat.unibe.ch>

	* Modified GPlab-package (text, references, etc.)

	* Modified the Description file (maintainer, etc.)

	* Modified scores.Rd (typo, etc.)

2015-01-23  yves  <deville.yves@alpestat.com>
