@@ -1,17 +1,17 @@
 Package: kergp
 Type: Package
 Title: Gaussian Process Laboratory
-Version: 0.1.0
-Date: 2015-06-22
+Version: 0.2.0
+Date: 2015-12-22
 Author: Yves Deville, David Ginsbourger, Olivier Roustant. Contributors: Nicolas Durrande.
 Maintainer: Yves Deville <deville.yves@alpestat.com>
 Description: Gaussian Process models with customised covariance kernels.
 License: GPL-3
 Depends: Rcpp (>= 0.10.5), methods, testthat
-Suggests: DiceKriging, DiceDesign, lhs, inline
-Imports: MASS, numDeriv, stats4
+Suggests: DiceKriging, DiceDesign, lhs, inline, foreach
+Imports: MASS, numDeriv, stats4, doParallel
 LinkingTo: Rcpp
 NeedsCompilation: yes
-Packaged: 2015-06-22 09:04:28 UTC; yves
+Packaged: 2015-12-23 06:16:18 UTC; yves
 Repository: CRAN
-Date/Publication: 2015-06-22 12:49:23
+Date/Publication: 2015-12-23 09:15:28
