@@ -1,21 +1,16 @@
-c4c5b0785d755e98eb3f443c558af0be *ChangeLog
-2e765c3210a28a1aad3d4014818e5c15 *DESCRIPTION
-fa0dba7c7c744ba6292656b87bf66d58 *NAMESPACE
+0d1746580b9de9160dfeb99e078e4ded *ChangeLog
+51278384cf7bf3a8897f14d2036ed97b *DESCRIPTION
+c41b055715dc75ffcf4b7b581a07445f *NAMESPACE
 ed413125b57b3a9304d8517c575ceaaf *R/allGenerics.R
 f4e79f0670bc530d676d0109bb3ce391 *R/covMan.R
 f28d48b8712a6828ea7d4aa719dea16f *R/covTS.R
 9979b4a98cc75071fa15e17ec51647cf *R/covZZAll.R
-b8141fcb93060267590738f727eabd8f *R/gp.R
+ea7b51dbb4508c21c3ca3d13d4ac15a0 *R/gp.R
 548810bc82370efd2a05e62ad3605999 *R/kernels1d_Call.R
-3e86f86ea9c1cb72af8e1aad9d0d16ca *R/logLikFuns.R
-b5c0266f7f6b07092bfb1231ac61818b *R/methodGLS.R
-15e7c711b623f81a45d009ca6b5e2f83 *R/methodMLE.R
+9406e86e2be395cdb86a1aab730ddc88 *R/logLikFuns.R
+f707c2ecc3416ecf2e91f4fafa65934a *R/methodGLS.R
+285ae4bdcb957b61e20af17343bed726 *R/methodMLE.R
 8c4ae97fb83868288dac6c8ee1dc5607 *R/simulPar.R
-28ad997b861dc15173c3dcc2b2eb0c7a *inst/tests/test-SK-OrnsteinUhlenbeck.R
-11f557847a168f0565220a65a49e9cf0 *inst/tests/test-covMat.R
-e8f817350eed293078ebf502adf70b05 *inst/tests/test-covTSGrad.R
-36753ce714503a3ce73e0679a34b2e48 *inst/tests/test-interp.R
-795dc8c90add4e6fab82d9b6b2afa28f *inst/tests/test-loo.R
 0d28a3c85920a83b8c6567edad0b41a8 *man/MLE-methods.Rd
 021d673e1d080a618cb409974efa11b1 *man/MLE.Rd
 f74c3b22cc274350a814619cc568f532 *man/checkX-methods.Rd
@@ -32,10 +27,10 @@ d19e0ace812d07f8ee2328a578276240 *man/covTS-class.Rd
 de53b96d60920cc442554ff85efc31a4 *man/covTS.Rd
 0bf7d583acf9283f743b2bf1587f5a5a *man/gls-methods.Rd
 e89a1bd6bc043f0c20854c233b5ee29d *man/gls.Rd
-11a1c29eb0abe0383ea7273a36f9fde5 *man/gp.Rd
+5e6bd56b47e0dc7eae5607f0660bbd4b *man/gp.Rd
 b3705a090d1179f10f45dce494fb6a87 *man/influence.gp.Rd
 c14c229c636ce9cade535c92095da263 *man/inputNames.Rd
-521bf2e1b6ac45f8f7d91dec3aecbe8d *man/kergp-package.Rd
+09963c410c563ed9eae8d4247acad4ec *man/kergp-package.Rd
 5d51eeb4daed79c2cd096ac150904160 *man/kernelName.Rd
 184cb453e1ec91ac84db898d58613c3d *man/npar-methods.Rd
 a204e76420e6e5783c8192b595470f58 *man/npar.Rd
@@ -55,4 +50,8 @@ b3f86c20b81b51f5162874977d38784d *src/Makevars
 5a53a8abf0bf0f74c5216bf3aaf7a1da *src/covWhiteNoise.c
 48895f606bc1722cca62f87645ec16c8 *src/kern1d.c
 3d057d0714878df4cab2a9ba188944dc *src/kern1d_Call.c
-4a0350a7ed07d940d96bbca732929bf1 *tests/test-all.R
+ebb40f26e18658c17e7caded35c18ee0 *tests/testthat/test-SK-OrnsteinUhlenbeck.R
+5fe8b73b8b1e53610f8104d013652945 *tests/testthat/test-covMat.R
+20c9e8233e16ff6a6c4a43de86d426ee *tests/testthat/test-covTSGrad.R
+32ea9e877c469f5f7f1bf121205c3647 *tests/testthat/test-interp.R
+710acfbbae73d8e0ac1c72c1ff269b8a *tests/testthat/test-loo.R
