@@ -1,5 +1,0 @@
-library(testthat)
-library(kergp)
-library(numDeriv)
-
-test_package("kergp")
