@@ -1,3 +1,5 @@
+library(testthat)
+library(kergp)
 
 x <- c(0, 0.4, 0.6, 0.8, 1)
 y <- c(-0.3, 0, -0.8, 0.5, 0.9)
